--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div class="container">
-      <form class="row g-3">
-            <div class="col-12"><h3>Payment for Example</h3></div>
-            <div class="alert alert-danger col-12 role="alert" >
+      <form class="border mt-5 mb-5 container-fluid">
+        <div class="row">
+            <div class="col-12 bg-light border mt-0"><h3>Payment for Example</h3></div>
+        </div>
+
+        <div class="row p-4">
+            <div class="alert alert-danger col-12 role= alert">
               Some fields are missing
             </div>
         <div class="col-md-5">
@@ -83,9 +87,13 @@
           <small class="text-secondary">Add any notes here.</small>
         </div>
         
-        <div class="col-12 text-end">
+        </div>
+      
+        <div class="row">
+        <div class="col-12 text-end bg-light mb-0 border p-2">
           <button type="reset" class="btn btn-secondary">Cancel</button>
           <button type="submit" class="btn btn-primary">Send</button>
+        </div>
         </div>
       </form>
     </div>
